making it send an email

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,6 @@ GITHUB_TOKEN="your oauth token"
 GITHUB_REPOS="api,api-doc,core"
 GITHUB_ORG="heroku"
 GITHUB_USERS="brandur,geemus,mfine,pedro"
+EMAIL_TO="myteam@company.com"
+EMAIL_FROM="bot@company.com"
+
