ugly ass pass on zendesk

--- a/.env.sample
+++ b/.env.sample
@@ -4,4 +4,6 @@ GITHUB_ORG="heroku"
 GITHUB_USERS="brandur,geemus,mfine,pedro"
 EMAIL_TO="myteam@company.com"
 EMAIL_FROM="bot@company.com"
-
+ZENDESK_USER="bot@company.com"
+ZENDESK_PASSWORD="secret"
+ZENDESK_GROUP="API"
