--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,9 @@ GITHUB_ORG="heroku"
 GITHUB_USERS="brandur,geemus,mfine,pedro"
 EMAIL_TO="myteam@company.com"
 EMAIL_FROM="bot@company.com"
+PAGERDUTY_SCHEDULE="SCHEDULE1"
+PAGERDUTY_SERVICE="SERVICE1,SERVICE2"
+PAGERDUTY_URL="https://user:pass@company.pagerduty.com"
 ZENDESK_USER="bot@company.com"
 ZENDESK_PASSWORD="secret"
 ZENDESK_GROUP="API"
